pod-security-vpol/baseline/restrict-seccomp/restrict-seccomp.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-seccomp
  annotations:
    policies.kyverno.io/title: Restrict Seccomp in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30+"
    policies.kyverno.io/description: >-
      The seccomp profile must not be explicitly set to Unconfined. This policy, 
      requiring Kubernetes v1.30 or later, ensures that seccomp is unset or 
      set to `RuntimeDefault` or `Localhost`.
spec:
  validationActions:
     - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods", "replicationcontrollers"]
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments", "daemonsets", "statefulsets", "replicasets"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["jobs", "cronjobs"]
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["UPDATE"]
      resources: ["pods/ephemeralcontainers"]
  variables:
    - name: podSpec
      expression: >-
        object.spec.?jobTemplate.?spec.?template.?spec.orValue(
        object.spec.?template.?spec.orValue(object.spec))
    - name: allContainers
      expression: >-
        variables.podSpec.containers +
        variables.podSpec.?initContainers.orValue([]) +
        variables.podSpec.?ephemeralContainers.orValue([])
    - name: allowedProfileTypes
      expression: "['RuntimeDefault', 'Localhost']"
    - name: hasValidSeccompProfile
      expression: >-
        variables.podSpec.?securityContext.?seccompProfile.?type.orValue('Localhost') in variables.allowedProfileTypes
  validations:
  - expression: >-
      variables.hasValidSeccompProfile &&
      variables.allContainers.all(container, 
        container.image in exceptions.allowedImages ||
        container.?securityContext.?seccompProfile.?type.orValue('Localhost') in variables.allowedProfileTypes ||
        ('seccomp.type:' + container.?securityContext.?seccompProfile.?type.orValue('')) in exceptions.allowedValues)
    message: >-
      Use of custom Seccomp profiles is disallowed. The field 
      `securityContext.seccompProfile.type` must be unset or set to `RuntimeDefault` or `Localhost`.
